== 0.2.2 / ??

== 0.2.1 / 2011-09-18

* Minor fixes for Gem packaging

== 0.2.0 / 2011-09-18

* Added remarks listing.
* Minor fixes
** removed _formalpara_ from the list of countable text elements because they contain _para_ elements

== 0.1.1 / 2011-09-07

* Documentation corrections

== 0.1.0 / 2011-09-07

* Initial version